Removed css rule causing advanced settings issue on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -165,10 +165,6 @@ footer {
   flex-direction: column;
 }
 
-.swap-list-area {
-  display: none;
-}
-
 .example {
   color: $color-cloud-burst;
   background-color: $color-mantis;
